--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="container">
                 <!-- // Brand // -->
 
-                <a class="navbar-brand" href="#">B<span>ea</span>M</a>
+                <a class="navbar-brand" href="#">Ges<span>cob</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <!-- / NavLinks / -->
@@ -113,11 +113,11 @@
                     <div class="col-md-8 offset-md-2">
                         <!-- // Caption // -->
                         <div class="caption">
-                            <h1>Make Business Easy With Beam.</h1>
-                            <p class="sub">Donec quam felis, ultricies nec, pellentesque eu, pretium quis sem.</p>
-                            <a class="btn btn-primary" href="#">Download Now</a>
+                            <h1>Sistema Gescob</h1>
+                            <p class="sub">Creditos Y Cobranzas</p>
+                            <!-- <a class="btn btn-primary" href="#">Download Now</a> -->
                             <!-- / Macbook IMG / -->
-                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/macbook.png" alt="macbook">
+                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screen1.png" alt="macbook">
                         </div>
                     </div>
                 </div>
@@ -136,25 +136,25 @@
                     <!-- /// Icon /// -->
                     <i data-vi="layers" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
                     <!-- // Title // -->
-                    <h4>Creative Design</h4>
+                    <h4>Adaptable 24/7</h4>
                     <!-- / Caption / -->
-                    <p>Unlike team chat apps, Beam is designed to help your team stay focused by keeping relevant and actionable.</p>
+                    <p>Tus datos estarán seguros en la nube y no necesitarás instalar nada para operar el sistema y acceder a tu información desde cualquier sitio y desde cualquier dispositivo.</p>
                 </div>
                 <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <!-- /// Icon /// -->
                     <i data-vi="website" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
                     <!-- // Title // -->
-                    <h4>Fully Responsive</h4>
+                    <h4>Calidad 24/7</h4>
                     <!-- / Caption / -->
-                    <p>Unlike team chat apps, Beam is designed to help your team stay focused by keeping relevant and actionable.</p>
+                    <p>Cualquiera que haya sido el producto o servicio adquirido, le acompaña una garantia de calidad para que te quedes tranquilo.</p>
                 </div>
                 <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
                     <!-- /// Icon /// -->
                     <i data-vi="chat" data-vi-size="70" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i>
                     <!-- // Title // -->
-                    <h4>Unlimited Support</h4>
+                    <h4>Soporte 24/7</h4>
                     <!-- / Caption / -->
-                    <p>Unlike team chat apps, Beam is designed to help your team stay focused by keeping relevant and actionable.</p>
+                    <p>Todo un equipo de profesionales expertos en el producto y en materias de índole administrativo, contable y tecnológico te asistirá en todo momento.</p>
                 </div>
             </div>
         </div>
@@ -168,8 +168,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <h3>Powerful services for Powerful applications.</h3>
-                    <p>Responsive code that makes your landing page look good on all devices (desktops, tablets, and phones). Created with mobile specialists.</p>
+                    <h3>Lo complejo se hizo simple</h3>
+                    <p>Gescob integra funciones de negocio de una manera asombrosamente simple, porque lo realmente importante no es lo que una herramienta puede hacer, sino lo que las personas pueden lograr con ella.<br>
+                    </p>
                     <ul class="list-unstyled">
                         <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Responsive code.</span></li>
                         <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Look good on all devices.</span></li>
@@ -178,19 +179,19 @@
                 </div>
                 <div class="col-md-7 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".5s">
                     <div class="img-table">
-                        <img src="imgs/table.png" class="img-fluid" alt="table">
+                        <img src="imgs/screen2.png" class="img-fluid" alt="table">
                     </div>
                 </div>
             </div>
             <div class="row seconde">
                 <div class="col-md-7 wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <img src="imgs/updates.jpg" class="img-fluid" alt="update">
+                    <img src="imgs/movil.jpg" class="img-fluid" alt="update">
                 </div>
                 <div class="col-md-5 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".5s">
                     <div class="caption">
-                        <h3>Easily balance workloads and manage resources.</h3>
-                        <p>Responsive code that makes your landing page look good on all devices (desktops, tablets, and phones). Created with mobile specialists.</p>
-                        <p>Plan ahead by day, week, or month, and see project status at a glance</p>
+                        <h3>Desde cualquier sitio.</h3>
+                        <p>Con Gescob puede gestionar su empresa desde el sitio en que se encuentre, de forma rápida y segura.</p>
+                        <p>Podrá acceder a la información de su negocio de forma centralizada y actualizada en tiempo real.</p>
                         <button class="btn btn-secondary" type="button">Learn More</button>
                     </div>
                 </div>
