Se modifica el title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/preloader.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Beam - Free Bootstrap Template</title>
+    <title>Gescob|Jr Ingenieria</title>
 </head>
 
 <body data-spy="scroll" data-target=".navbar">
