--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
-            <p>&copy; Beam All Right Reserved 2018. Made By Bakhtari Badr</p>
+            <p>&copy;  Todos los Derechos Reservados | J.R. Ingeniería y Servicios</p>
         </div>
     </section>
 
