Se agrega clase y bordes a Img Ppal

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <p class="sub">Creditos Y Cobranzas</p>
                             <!-- <a class="btn btn-primary" href="#">Download Now</a> -->
                             <!-- / Macbook IMG / -->
-                            <img class="img-fluid mx-auto wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screen1.png" alt="macbook">
+                            <img class="img-fluid mx-auto wow fadeInUp imagenPpal" data-wow-duration="1s" data-wow-delay=".3s" src="imgs/screen1.png"  alt="macbook">
                         </div>
                     </div>
                 </div>
