--- a/index.html
+++ b/index.html
@@ -83,22 +83,16 @@
                             <a class="nav-link page-scroll" href="#home">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#services">Service</a>
+                            <a class="nav-link page-scroll" href="#services">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#features">Features</a>
+                            <a class="nav-link page-scroll" href="#features">Descripción</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#prices">Prices</a>
+                            <a class="nav-link page-scroll" href="#prices">Precios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#team">Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#contact">Contact</a>
-                        </li>
-                        <li>
-                            <button class="btn btn-primary">Sign In</button>
+                            <a class="nav-link page-scroll" href="#contact">Contacto</a>
                         </li>
                     </ul>
 
@@ -209,8 +203,8 @@
             <!-- /// Title /// -->
             <div class="row">
                 <div class="col-md-6 col-sm-offset-2 text-center mx-auto">
-                    <h2 class="section-title">Features designed for you:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
+                    <h2 class="section-title">Diseñado especialmente para ti:</h2>
+                    <p>Simplificando todo el proceso de su negocio o empresa.</p>
                 </div>
             </div>
             <!-- /// Features /// -->
@@ -219,43 +213,22 @@
                     <div class="feature-icon">
                         <i data-vi="processor" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>UI/UX Design</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>Diseño Responsivo </h4>
+                    <p>Desarrollado para adaptarse a todos los dispositivos.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <div class="feature-icon">
                         <i data-vi="newspaper" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>Branding</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>Gestiona</h4>
+                    <p>Compras, Ventas y control de Stock.</p>
                 </div>
                 <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
                     <div class="feature-icon">
                         <i data-vi="controller" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
                     </div>
-                    <h4>Easy To Use</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
-                </div>
-                <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay=".8s">
-                    <div class="feature-icon">
-                        <i data-vi="doc" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
-                    </div>
-                    <h4>Pre-Planning</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
-                </div>
-                <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay="1s">
-                    <div class="feature-icon">
-                        <i data-vi="user" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
-                    </div>
-                    <h4>User Friendly</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
-                </div>
-                <div class="col-md-4 feature wow bounceIn" data-wow-duration=".5s" data-wow-delay="1.2s">
-                    <div class="feature-icon">
-                        <i data-vi="cloud" data-vi-primary="#60b6f4" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
-                    </div>
-                    <h4>Cloud Service</h4>
-                    <p>The European languages are members of the same family separate existence.</p>
+                    <h4>Fácil de usar</h4>
+                    <p>Amigable con el usuario, fácil manejo.</p>
                 </div>
             </div>
         </div>
@@ -265,43 +238,6 @@
     TESTIMONIALS 
     =============================================== -->
 
-    <section id="testimonials">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-sm-offset-2 carousel-container">
-                    <div id="owl-testimonials" class="owl-carousel owl-theme">
-                        <div class="item">
-                            <div class="testi-icon">
-                                <i data-vi="bullhorn" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
-                            </div>
-                            <p class="quote">" Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. "</p>
-                            <img src="imgs/1.png" class="img-fluid" alt="1">
-                            <h4>John Doe</h4>
-                            <span>CEO Founder</span>
-                        </div>
-                        <div class="item">
-                            <div class="testi-icon">
-                                <i data-vi="bullhorn" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
-                            </div>
-                            <p class="quote">" Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. "</p>
-                            <img src="imgs/2.png" class="img-fluid" alt="2">
-                            <h4>Nadine Tores</h4>
-                            <span>Project Manager</span>
-                        </div>
-                        <div class="item">
-                            <div class="testi-icon">
-                                <i data-vi="bullhorn" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
-                            </div>
-                            <p class="quote">" Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem ".</p>
-                            <img src="imgs/3.png" class="img-fluid" alt="3">
-                            <h4>James Doe</h4>
-                            <span>CEO Founder</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- ==============================================
     PRICING 
@@ -312,8 +248,8 @@
             <div class="row">
                 <!-- /// Title /// -->
                 <div class="col-md-6 col-sm-offset-2 col-md-offset-3 text-center mx-auto">
-                    <h2 class="section-title">Our Plans And Pricing:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
+                    <h2 class="section-title">Nuestros Planes y Precios:</h2>
+                    <p>Elije el plan que mejor se acomode a ti.</p>
                 </div>
             </div>
             <!-- /// Pricing Tables /// -->
@@ -327,7 +263,7 @@
                             <h4>Free</h4>
                         </div>
                         <ul>
-                            <li>Wordpress Theme</li>
+                            <li>press Theme</li>
                             <li>50GB Disk Space</li>
                             <li>50 Email Accounts</li>
                             <li>High Speed Internet</li>
@@ -387,20 +323,17 @@
             <div class="row">
                 <div class="col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
                     <!-- /// Title /// -->
-                    <h2 class="section-title">App Screenshots:</h2>
+                    <h2 class="section-title">Capturas de Pantalla:</h2>
                     <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
-                </div>
+                </div>  
             </div>
             <div class="row">
                 <div id="owl-screenshots">
-                    <div class="item"><img src="imgs/screenshots/1.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/screenshots/2.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/screenshots/3.png" class="img-fluid" alt="screen-3"></div>
-                    <div class="item"><img src="imgs/screenshots/1.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/screenshots/2.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/screenshots/3.png" class="img-fluid" alt="screen-3"></div>
-                    <div class="item"><img src="imgs/screenshots/1.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/screenshots/2.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/login.png" class="img-fluid" alt="screen-1"></div>
+                    <div class="item"><img src="imgs/screen1.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/inicio.png" class="img-fluid" alt="screen-3"></div>
+                    <div class="item"><img src="imgs/presupuesto.png" class="img-fluid" alt="screen-1"></div>
+                    <div class="item"><img src="imgs/conf.png" class="img-fluid" alt="screen-2"></div>
                 </div>
             </div>
         </div>
@@ -432,85 +365,10 @@
     TEAM
     =============================================== -->
 
-    <section id="team">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
-                    <!-- /// Title /// -->
-                    <h2 class="section-title">Our Team Of Experts:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
-                </div>
-            </div>
-            <div class="row">
-                <!-- /// TEAM MEMBERS /// -->
-                <div class="col-md-4 member wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <div class="member-img">
-                        <img src="imgs/team/team1.png" class="img-fluid" alt="team-1">
-                    </div>
-                    <h4>Jason Brody</h4>
-                    <p>CEO Founder</p>
-                    <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4 member wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
-                    <div class="member-img">
-                        <img src="imgs/team/team-2.png" class="img-fluid" alt="team-2">
-                    </div>
-                    <h4>Myra Johns</h4>
-                    <p>web designer</p>
-                    <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <div class="member-img">
-                        <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
-                    </div>
-                    <h4>Mike Smith</h4>
-                    <p>web developer</p>
-                    <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- ==============================================
     BRAND
     =============================================== -->
-
-    <section id="brands">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
-                    <!-- /// Title /// -->
-                    <h2 class="section-title">We Are Trusted By:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div id="owl-brands">
-                    <div class="item"><img src="imgs/brands/brand-1.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-2.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-3.png" class="img-fluid" alt="brand-3"></div>
-                    <div class="item"><img src="imgs/brands/brand-1.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-2.png" class="img-fluid" alt="brand-2"></div>
-                    <div class="item"><img src="imgs/brands/brand-3.png" class="img-fluid" alt="brand-3"></div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- ==============================================
     FOOTER
@@ -553,8 +411,42 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Send Message</button>
             </form>
-            <p>&copy; Beam All Right Reserved 2018. Made By Bakhtari Badr</p>
+            <section id="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".2s">
+                            <!-- /// Icon /// -->
+                            <i style= "font-size: 40px;" class="fas fa-map-marked-alt mapa"></i>
+                            <!-- // Title // -->
+                            <h4>Direccion</h4>
+                            <!-- / Caption / -->
+                            <p>Luciano Vera #401 <br>casi San Patricio, Capiatá, Central, Paraguay</p>
+                        </div>
+                        <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
+                            <!-- /// Icon /// -->
+                            <i style= "font-size: 40px;" class="fa fa-phone celular"></i>
+                            <!-- // Title // -->
+                            <h4>Teléfono</h4>
+                            <!-- / Caption / -->
+                            <p>Prof. Ing. Justo R. Gonzalez<br> 
+                                +595 981 420 987<br> 
+                                Lunes a Viernes , 8:00-17:00.</p>
+                        </div>
+                        <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
+                            <!-- /// Icon /// -->
+                            <i style= "font-size: 40px;"class="fas fa-envelope-square mail"></i>
+                            <!-- // Title // -->
+                            <h4>E-mail</h4>
+                            <!-- / Caption / -->
+                            <p>jrgonzalez3@gmail.com<br>Soporte Online<br>24/7</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
         </div>
+            <p>&copy; Beam All Right Reserved 2018. Made By Bakhtari Badr</p>
+           
     </section>
 
     <!-- jQuery -->
