agg ceo, team, marcas

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#prices">Precios</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#team">Equipo</a>
+                        </li>
                         
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#contact">Contacto</a>
@@ -258,6 +262,26 @@
     TESTIMONIALS 
     =============================================== -->
 
+    <section id="testimonials">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-sm-offset-2 carousel-container">
+                    <div id="owl-testimonials" class="owl-carousel owl-theme">
+                        <div class="item">
+                            <div class="testi-icon">
+                                <i data-vi="bullhorn" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
+                            </div>
+                            <p class="quote">" Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing "</p>
+                            <img src="imgs/1.png" class="img-fluid" alt="1">
+                            <h4>Justo González</h4>
+                            <span>CEO Fundador</span>                      
+                       
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- ==============================================
     PRICING 
     =============================================== -->
@@ -387,13 +411,99 @@
     TEAM
     =============================================== -->
 
- 
+    <section id="team">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
+                    <!-- /// Title /// -->
+                    <h2 class="section-title">Nuestro Equipo de expertos:</h2>
+                    <!-- <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p> -->
+                </div>
+            </div>
+            <div class="row">
+                <!-- /// TEAM MEMBERS /// -->
+                <div class="col-md-4 member wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <div class="member-img">
+                        <img src="imgs/team/team1.png" class="img-fluid" alt="team-1">
+                    </div>
+                    <h4>Rodney Pereira</h4>
+                    <p>Proyect Manager</p>
+                    <ul class="social-media">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 member wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
+                    <div class="member-img">
+                        <img src="imgs/team/team-2.png" class="img-fluid" alt="team-2">
+                    </div>
+                    <h4>Jessica Centurión</h4>
+                    <p>Desarrollador</p>
+                    <ul class="social-media">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <div class="member-img">
+                        <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
+                    </div>
+                    <h4>Kevin Torres</h4>
+                    <p>Desarrollador</p>
+                    <ul class="social-media">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                    <div class="member-img">
+                        <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
+                    </div>
+                    <h4>Fernando Delgado</h4>
+                    <p>Web Development </p>
+                    <ul class="social-media">
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- ==============================================
     BRAND
     =============================================== -->
 
-   
+    <section id="brands">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
+                    <!-- /// Title /// -->
+                    <h2 class="section-title">We Are Trusted By:</h2>
+                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div id="owl-brands">
+                    <div class="item"><img src="imgs/brands/brand-1.png" class="img-fluid" alt="brand-1"></div>
+                    <div class="item"><img src="imgs/brands/brand-2.png" class="img-fluid" alt="brand-1"></div>
+                    <div class="item"><img src="imgs/brands/brand-3.png" class="img-fluid" alt="brand-3"></div>
+                    <div class="item"><img src="imgs/brands/brand-1.png" class="img-fluid" alt="brand-1"></div>
+                    <div class="item"><img src="imgs/brands/brand-2.png" class="img-fluid" alt="brand-2"></div>
+                    <div class="item"><img src="imgs/brands/brand-3.png" class="img-fluid" alt="brand-3"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- ==============================================
     FOOTER
