--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="css/preloader.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Gescob | Jr Ingenieria</title>
-</head>
+    <title>Gescob !!| Jr Ingenieria</title>
+</head>a
 
 <body data-spy="scroll" data-target=".navbar">
 
