--- a/index.html
+++ b/index.html
@@ -412,8 +412,40 @@
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".2s">
+                        <!-- /// Icon /// -->
+                        <i style= "font-size: 40px;" class="fas fa-map-marked-alt mapa"></i>
+                        <!-- // Title // -->
+                        <h4>Direccion</h4>
+                        <!-- / Caption / -->
+                        <p>Luciano Vera #401 <br>casi San Patricio, Capiatá, Central, Paraguay</p>
+                    </div>
+                    <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
+                        <!-- /// Icon /// -->
+                        <i style= "font-size: 40px;" class="fa fa-phone celular"></i>
+                        <!-- // Title // -->
+                        <h4>Teléfono</h4>
+                        <!-- / Caption / -->
+                        <p>Prof. Ing. Justo R. Gonzalez<br> 
+                            +595 981 420 987<br> 
+                            Lunes a Viernes , 8:00-17:00.</p>
+                    </div>
+                    <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
+                        <!-- /// Icon /// -->
+                        <i style= "font-size: 40px;"class="fas fa-envelope-square mail"></i>
+                        <!-- // Title // -->
+                        <h4>E-mail</h4>
+                        <!-- / Caption / -->
+                        <p>jrgonzalez3@gmail.com<br>Soporte Online<br>24/7</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <p>&copy;  Todos los Derechos Reservados | J.R. Ingeniería y Servicios</p>
-           
+
     </section>
 
     <!-- jQuery -->
