--- a/index.html
+++ b/index.html
@@ -329,11 +329,15 @@
             </div>
             <div class="row">
                 <div id="owl-screenshots">
-                    <div class="item"><img src="imgs/login.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/screen1.png" class="img-fluid" alt="screen-2"></div>
-                    <div class="item"><img src="imgs/inicio.png" class="img-fluid" alt="screen-3"></div>
-                    <div class="item"><img src="imgs/presupuesto.png" class="img-fluid" alt="screen-1"></div>
-                    <div class="item"><img src="imgs/conf.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/caja.png" class="img-fluid" alt="screen-1"></div>
+                    <div class="item"><img src="imgs/crearventa.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/detalle.png" class="img-fluid" alt="screen-3"></div>
+                    <div class="item"><img src="imgs/factura.png" class="img-fluid" alt="screen-1"></div>
+                    <div class="item"><img src="imgs/mov.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/movimiento.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/nuevacompra.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/nuevaventa.png" class="img-fluid" alt="screen-2"></div>
+                    <div class="item"><img src="imgs/productos.png" class="img-fluid" alt="screen-2"></div>
                 </div>
             </div>
         </div>
