--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/preloader.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Gescob !!| Jr Ingenieria</title>
+    <title>Gescob prrr | Jr Ingenieria</title>
 </head>a
 
 <body data-spy="scroll" data-target=".navbar">
