--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- // Brand // -->
 
                 <a class="navbar-brand" href="#">Ges<span>cob</span></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">menu</i></button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="material-icons">Menu</i></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <!-- / NavLinks / -->
 
