--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
             <div class="row">
                 <!-- /// Title /// -->
                 <div class="col-md-6 col-sm-offset-2 col-md-offset-3 text-center mx-auto">
-                    <h2 class="section-title">Our Plans And Pricing:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
+                    <h2 class="section-title">Nuestros planes y precios:</h2>
+                    <!-- <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p> -->
                 </div>
             </div>
             <!-- /// Pricing Tables /// -->
@@ -337,7 +337,7 @@
                 <div class="col-lg-4 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="price-table">
                         <div class="header">
-                            <h5 class="title">Pro</h5>
+                            <h5 class="title">Premium</h5>
                             <div class="price">50$</div>
                             <h4>Per Year</h4>
                         </div>
@@ -422,7 +422,7 @@
             </div>
             <div class="row">
                 <!-- /// TEAM MEMBERS /// -->
-                <div class="col-md-4 member wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member wow fadeInLeft" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/team1.png" class="img-fluid" alt="team-1">
                     </div>
@@ -435,7 +435,7 @@
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 member wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
+                <div class="col-md-3 member wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <div class="member-img">
                         <img src="imgs/team/team-2.png" class="img-fluid" alt="team-2">
                     </div>
@@ -448,7 +448,7 @@
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
                     </div>
@@ -461,7 +461,7 @@
                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
+                <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
                     <div class="member-img">
                         <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
                     </div>
@@ -493,12 +493,14 @@
             </div>
             <div class="row">
                 <div id="owl-brands">
-                    <div class="item"><img src="imgs/brands/brand-1.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-2.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-3.png" class="img-fluid" alt="brand-3"></div>
-                    <div class="item"><img src="imgs/brands/brand-1.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-2.png" class="img-fluid" alt="brand-2"></div>
-                    <div class="item"><img src="imgs/brands/brand-3.png" class="img-fluid" alt="brand-3"></div>
+                    <div class="item"><img src="imgs/marca1.png" class="img-fluid images" alt="brand-1"></div>
+                    <div class="item"><img src="imgs/marca2.png" class="img-fluid images" alt="brand-1" ></div>
+                    <div class="item"><img src="imgs/marca3.jpeg" class="img-fluid images" alt="brand-3"></div>
+                    <div class="item"><img src="imgs/marca4.jpg" class="img-fluid images" alt="brand-1"></div>
+                    <div class="item"><img src="imgs/marca1.png" class="img-fluid images" alt="brand-2"></div>
+                    <div class="item"><img src="imgs/marca2.png" class="img-fluid images" alt="brand-3"></div>
+                    <div class="item"><img src="imgs/marca3.jpeg" class="img-fluid images" alt="brand-3"></div>
+                    <div class="item"><img src="imgs/marca4.jpg" class="img-fluid images" alt="brand-1"></div>
                 </div>
             </div>
         </div>
