Se quita la A que Jesica puso al pedo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
     <title>Gescob - Jr Ingenieria</title>
-</head>a
+</head>
 
 <body data-spy="scroll" data-target=".navbar">
 
