--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <!-- // Title // -->
                     <h4>Calidad 24/7</h4>
                     <!-- / Caption / -->
-                    <p>Cualquiera que haya sido el producto o servicio adquirido, le acompaña una garantia de calidad para que te quedes tranquilo.</p>
+                    <p>Cualquiera que haya sido el producto o servicio adquirido, le acompaña nuestro servicio de post-venta y soporte online para que te quedes tranquilo.</p>
                 </div>
                 <div class="col-md-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".6s">
                     <!-- /// Icon /// -->
