--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
                     <!-- /// Title /// -->
-                    <h2 class="section-title">Contacta conmigo! :</h2>
+                    <h2 class="section-title">Contacta conmigo!</h2>
                     
                 </div>
             </div>
