--- a/index.html
+++ b/index.html
@@ -86,10 +86,13 @@
                             <a class="nav-link page-scroll" href="#services">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#features">Descripción</a>
+                            <a class="nav-link page-scroll" href="#features">Funciones</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#prices">Precios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#team">Equipo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="#contact">Contacto</a>
@@ -166,9 +169,9 @@
                     <p>Gescob integra funciones de negocio de una manera asombrosamente simple, porque lo realmente importante no es lo que una herramienta puede hacer, sino lo que las personas pueden lograr con ella.<br>
                     </p>
                     <ul class="list-unstyled">
-                        <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Responsive code.</span></li>
-                        <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Look good on all devices.</span></li>
-                        <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Created with mobile specialists.</span></li>
+                        <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Codigo Responsivo.</span></li>
+                        <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Buena vista en todos los dispositivos.</span></li>
+                        <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Creado por especialistas.</span></li>
                     </ul>
                 </div>
                 <div class="col-md-7 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".5s">
@@ -246,15 +249,7 @@
                             <div class="testi-icon">
                                 <i data-vi="bullhorn" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
                             </div>
-                            <p class="quote">"GESCOB, es una completa solución para la facturación de tu negocio, una manera fácil, intuitiva y
-                                sencilla de gestionar y controlar todo lo que antes te causaba estrés.
-                                GESCOB, te ayudara a aumentar tus ventas al facilitarte todo tipo de controles para que solo te
-                                preocupes de ganar dinero y conseguir cerrar buenas ventas.
-                                GESCOB, es adaptable a cualquier dispositivo, por lo que no tendrás que preocuparte en gastar tu
-                                dinero al adquirir lujosos equipos informáticos, esto supondrá un importante ahorro y acceso total
-                                a una tecnología de punta.
-                                Utilizamos los más altos estándares de calidad y seguridad en caso de ataques maliciosos, hemos
-                                implementado tecnología de punta en su desarrollo y lo adaptamos a tus necesidades."</p>
+                            <p class="quote">"GESCOB, es una completa solución para la facturación de tu negocio, una manera fácil, intuitiva y sencilla de gestionar y controlar todo lo que antes te causaba estrés."</p>
                             <img src="imgs/1.png" class="img-fluid" alt="1">
                             <h4>Justo González</h4>
                             <span>CEO Fundador</span>  
@@ -472,27 +467,6 @@
     <!-- ==============================================
     BRAND
     =============================================== -->
-    <section id="brands">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
-                    <!-- /// Title /// -->
-                    <h2 class="section-title">We Are Trusted By:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div id="owl-brands">
-                    <div class="item"><img src="imgs/brands/brand-1.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-2.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-3.png" class="img-fluid" alt="brand-3"></div>
-                    <div class="item"><img src="imgs/brands/brand-1.png" class="img-fluid" alt="brand-1"></div>
-                    <div class="item"><img src="imgs/brands/brand-2.png" class="img-fluid" alt="brand-2"></div>
-                    <div class="item"><img src="imgs/brands/brand-3.png" class="img-fluid" alt="brand-3"></div>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- ==============================================
     FOOTER
     =============================================== -->
