--- a/index.html
+++ b/index.html
@@ -292,35 +292,34 @@
                     <div class="price-table">
                         <div class="header">
                             <h5 class="title">Básico</h5>
-                            <div class="price">0$</div>
-                            <h4>Free</h4>
+                            <div class="price">100.000 Gs.</div>
+                            <h4>Incluye</h4>
                         </div>
                         <ul>
-                            <li>press Theme</li>
-                            <li>50GB Disk Space</li>
-                            <li>50 Email Accounts</li>
-                            <li>High Speed Internet</li>
-                            <li>Free Theme Installation</li>
+                            <li>Stock</li>
+                            <li>Compras</li>
+                            <li>Ventas Límite 40.000.000</li>
+                            <li>Configuraciones</li>
+                            <li>Caja</li>
                         </ul>
-                        <button class="btn btn-transparent" type="button">Sign Up</button>
-                    </div>
+                        <button onclick="location.href='https://jringenieriayservicios.com/tienda/sistemas/sistema-gescob/'" class="btn btn-transparent" type="button">Sign Up</button>                    </div>
                 </div>
                 <!--// First Table // -->
                 <div class="col-lg-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <div class="price-table">
                         <div class="header">
                             <h5 class="title">Estándar</h5>
-                            <div class="price">10$</div>
-                            <h4>Per Month</h4>
+                            <div class="price">150.000 Gs.</div>
+                            <h4>Incluye</h4>
                         </div>
                         <ul>
-                            <li>Wordpress Theme</li>
-                            <li>50GB Disk Space</li>
-                            <li>50 Email Accounts</li>
-                            <li>High Speed Internet</li>
-                            <li>Free Theme Installation</li>
+                            <li>Stock</li>
+                            <li>Compras</li>
+                            <li>Ventas Límite 80.000.000</li>
+                            <li>Configuraciones</li>
+                            <li>Caja</li>
                         </ul>
-                        <button class="btn btn-primary" type="button">Sign Up</button>
+                        <button onclick="location.href='https://jringenieriayservicios.com/tienda/sistemas/sistema-gescob/'" class="btn btn-primary" type="button">Sign Up</button>
                     </div>
                 </div>
                 <!--// First Table // -->
@@ -328,17 +327,17 @@
                     <div class="price-table">
                         <div class="header">
                             <h5 class="title">Premium</h5>
-                            <div class="price">50$</div>
-                            <h4>Per Year</h4>
+                            <div class="price">200.000 Gs.</div>
+                            <h4>Incluye</h4>
                         </div>
                         <ul>
-                            <li>Wordpress Theme</li>
-                            <li>50GB Disk Space</li>
-                            <li>50 Email Accounts</li>
-                            <li>High Speed Internet</li>
-                            <li>Free Theme Installation</li>
+                            <li>Stock</li>
+                            <li>Compras</li>
+                            <li>Ventas Ilimitado</li>
+                            <li>Configuraciones</li>
+                            <li>Caja</li>
                         </ul>
-                        <button class="btn btn-transparent" type="button">Sign Up</button>
+                        <button onclick="location.href='https://jringenieriayservicios.com/tienda/sistemas/sistema-gescob/'" class="btn btn-transparent" type="button">Sign Up</button>
                     </div>
                 </div>
             </div>
