--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     <div class="member-img">
                         <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
                     </div>
-                    <h4>Fernando Delgado</h4>
+                    <h4>Fernando Delgadooooo</h4>
                     <p>Desarrollador Web</p>
                     <ul class="social-media">
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
