--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <div class="col-md-7 wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".5s">
                     <div class="img-table">
-                        <img src="imgs/screen2.png" class="img-fluid" alt="table">
+                        <img src="imgs/ventacambio.png" class="img-fluid" alt="table">
                     </div>
                 </div>
             </div>
@@ -452,7 +452,7 @@
                     <div class="member-img">
                         <img src="imgs/team/team-3.png" class="img-fluid" alt="team-3">
                     </div>
-                    <h4>Fernando Delgadooooo</h4>
+                    <h4>Fernando Delgado</h4>
                     <p>Desarrollador Web</p>
                     <ul class="social-media">
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
