cambios en precios

--- a/index.html
+++ b/index.html
@@ -302,8 +302,10 @@
                             <li>Configuraciones</li>
                             <li>Caja</li>
                         </ul>
-                        <button onclick="location.href='https://jringenieriayservicios.com/tienda/sistemas/sistema-gescob/'" class="btn btn-transparent" type="button">Sign Up</button>                    </div>
-                </div>
+                        <button onclick="location.href='https://wa.link/x8pf5u'" target="_blank" class="btn btn-transparent"  type="button">Adquiere</button>                    
+                    </div>
+                        
+                    </div>
                 <!--// First Table // -->
                 <div class="col-lg-4 wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
                     <div class="price-table">
@@ -319,7 +321,7 @@
                             <li>Configuraciones</li>
                             <li>Caja</li>
                         </ul>
-                        <button onclick="location.href='https://jringenieriayservicios.com/tienda/sistemas/sistema-gescob/'" class="btn btn-primary" type="button">Sign Up</button>
+                        <button onclick="location.href='https://jringenieriayservicios.com/tienda/sistemas/sistema-gescob/'" class="btn btn-primary" type="button">Adquiere</button>
                     </div>
                 </div>
                 <!--// First Table // -->
@@ -337,7 +339,7 @@
                             <li>Configuraciones</li>
                             <li>Caja</li>
                         </ul>
-                        <button onclick="location.href='https://jringenieriayservicios.com/tienda/sistemas/sistema-gescob/'" class="btn btn-transparent" type="button">Sign Up</button>
+                        <button onclick="location.href='https://jringenieriayservicios.com/tienda/sistemas/sistema-gescob/'" class="btn btn-transparent" type="button">Adquiere</button>
                     </div>
                 </div>
             </div>
