--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 video-box">
                     <img src="imgs/video-bg.png" class="img-fluid wow rotateIn" data-wow-duration=".5s" data-wow-delay=".2s" alt="popup">
                     <div class="play-button">
-                        <a class="bla-2 wow flipInY" data-wow-duration=".5s" data-wow-delay=".4s" href="https://www.youtube.com/watch?v=3qyhgV0Zew0"><i class="material-icons">play_arrow</i></a>
+                        <a class="bla-2 wow flipInY" data-wow-duration=".5s" data-wow-delay=".4s" href="https://www.youtube.com/watch?v=063ISyPmpME"><i class="material-icons">play_arrow</i></a>
                         <div class="waves-block">
                             <div class="waves wave-1"></div>
                             <div class="waves wave-2"></div>
@@ -476,8 +476,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3 text-center title-container">
                     <!-- /// Title /// -->
-                    <h2 class="section-title">Don't Be Shy Send a Message:</h2>
-                    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born.</p>
+                    <h2 class="section-title">Contacta Conmigo!</h2>
                 </div>
             </div>
 
@@ -486,7 +485,7 @@
             <form>
                 <div class="form-row">
                     <div class="form-group col-xs-12 col-sm-4">
-                        <label>Name:</label>
+                        <label>Nombre:</label>
                         <input type="text" class="form-control" id="inputName4">
                     </div>
                     <div class="form-group col-xs-12 col-sm-4">
@@ -494,19 +493,19 @@
                         <input type="email" class="form-control" id="inputPassword4">
                     </div>
                     <div class="form-group col-xs-12 col-sm-4">
-                        <label>Phone:</label>
+                        <label>Telefono:</label>
                         <input type="text" class="form-control" id="inputPhone">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label>Subject:</label>
+                    <label>Asunto:</label>
                     <input type="text" class="form-control" id="inputSubject">
                 </div>
                 <div class="form-group">
-                    <label>Message:</label>
+                    <label>Mensaje:</label>
                     <textarea id="form-message" cols="30" rows="5" class="form-control"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Send Message</button>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
             <section id="about">
                 <div class="container">
