agg redes del equipo

--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
                     <h4>Rodney Pereira</h4>
                     <p>Proyect Manager</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://accounts.google.com/ServiceLogin/signinchooser?passive=1209600&continue=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&followup=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 member wow bounceIn" data-wow-duration=".5s" data-wow-delay=".4s">
@@ -432,9 +432,9 @@
                     <h4>Jessica Centurión</h4>
                     <p>Desarrollador</p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://accounts.google.com/ServiceLogin/signinchooser?passive=1209600&continue=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&followup=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
@@ -444,9 +444,9 @@
                     <h4>Fernando Delgado</h4>
                     <p>Web Development </p>
                     <ul class="social-media">
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://accounts.google.com/ServiceLogin/signinchooser?passive=1209600&continue=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&followup=https%3A%2F%2Faccounts.google.com%2Fb%2F0%2FAddMailService&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 member wow fadeInRight" data-wow-duration=".5s" data-wow-delay=".2s">
