--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <p>Gescob integra funciones de negocio de una manera asombrosamente simple, porque lo realmente importante no es lo que una herramienta puede hacer, sino lo que las personas pueden lograr con ella.<br>
                     </p>
                     <ul class="list-unstyled">
-                        <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Codigo Responsivo.</span></li>
+                        <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Codigo Adaptable.</span></li>
                         <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Buena vista en todos los dispositivos.</span></li>
                         <li><i data-vi="check" data-vi-size="40" data-vi-primary="#1992ec" data-vi-accent="#daeffd" data-vi-prop="#CEFAFF"></i> <span>Creado por especialistas.</span></li>
                     </ul>
