--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- // CSS FqqILES // -->
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap-4.1.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -23,7 +21,7 @@
     <link rel="stylesheet" href="css/preloader.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title><<Gescob - Jr Ingenieria>></title>
+    <title>Gescob - Jr Ingenieria</title>
 </head>
 
 <body data-spy="scroll" data-target=".navbar">
